<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Android Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="buildbigger_app">Build it bigger</string>
    <string name="xyz_app">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>

</resources>
