<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title"
        android:textSize="20dp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer"
        android:textSize="18dp"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true"
        android:background="@color/portfolio_app"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app"
        android:textSize="18dp"
        android:layout_below="@+id/spotify_streamer"
        android:layout_centerHorizontal="true"
        android:background="@color/portfolio_app"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app"
        android:textSize="18dp"

        android:layout_below="@+id/scores_app"
        android:layout_centerHorizontal="true"
        android:background="@color/portfolio_app"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/buildbigger_app"
        android:id="@+id/buildbigger_app"
        android:textSize="18dp"

        android:layout_below="@+id/library_app"
        android:layout_centerHorizontal="true"
        android:background="@color/portfolio_app"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:textSize="18dp"

        android:layout_below="@+id/buildbigger_app"
        android:layout_centerHorizontal="true"
        android:background="@color/capstone_portfolio_app"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
